# versa

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  launch.sh  launch_local.sh  launch_slurm.sh  pyproject.toml  setup.cfg  setup.py  todo.txt
.github/workflows/: ci.yml
ci/: python_check.yaml
demo/: arecho_config.yaml  arecho_results.json  chunked_results.json  interpreter_config.yaml  metrics_analysis.csv  metrics_tree.csv  scores.scp  traditional_cpu_results.json  universa_audioref_config.yaml  universa_audioref_results.json  universa_noref_config.yaml  universa_noref_results.json  versa_demo_interspeech2024.ipynb
docs/: ci,md  ci.md  contributing.md  metric_migration.md  supported_metrics.md  users.md
egs/: general.yaml  interpreter.yaml  run_cpu.sh  run_gpu.sh  singing.yaml  speech.yaml  speech_gpu.yaml
egs/demo/: codec.yaml  se.yaml  svs.yaml  tts.yaml
egs/separate_metrics/: arecho.yaml  audiobox_aesthetics.yaml  cdpam_distance.yaml  chroma_alignment.yaml  clap_score.yaml  dpam_distance.yaml  emo_vad.yaml  lid.yaml  multigauss.yaml  nisqa.yaml  nomad.yaml  noresqa.yaml  openbeats.yaml  pesq.yaml  pseudo_mos.yaml  qwen2_audio.yaml  sheet_ssqa.yaml  sigmos.yaml  songeval.yaml  universa.yaml  vad.yaml  vqscore.yaml  w2v2_dimensional_emotion.yaml  wer.yaml  wer_tiny.yaml  wvmos.yaml
egs/survey/: run_speech.sh
egs/universa_prepare/: cpu_subset.yaml  gpu_subset.yaml  universa_prepare.yaml
scripts/: extract_key.py  filter_wer.py  quick_split.py  show_result.py
scripts/chunk_func/: chunk.py
scripts/description/: README.md  interpreter.py  interpreter_shared.py  text_llm_description.py
scripts/post_process/: post_process.sh  qwen2_audio_json_output_standardizer.py  qwen2_audio_json_output_standardizer_batch.py  qwen2_audio_json_output_standardizer_eg.py
scripts/postprocess/: check_llm_result_match.py  filter_wer.py  post_process.sh  qwen2_audio_json_output_standardizer.py  qwen2_audio_json_output_standardizer_batch.py  qwen2_audio_jsonl_standardizer_batch.py
scripts/preprocess/: dir2scp.py  dir2scp.sh  jsonl2scp.py
scripts/survey/: average_result.py  get_wer.py  prepare_audioset-test.py  prepare_musdb.py
scripts/visualization/: README.md  build_metricsTree.py  radar_chart.py  requirements.txt  sunburst_chart.py
test/: test_fad.py  test_general.py  test_nisqa.py  test_nomad.py  test_qwen2_audio.py
test/test_metrics/: test_asr_matching.py  test_asvspoof.py  test_audiobox_aesthetics.py  test_base_metrics.py  test_cdpam.py  test_cdpam_distance.py  test_chroma_alignment.py  test_clap_score.py  test_definition.py  test_discrete_speech.py  test_dnsmos_pro.py  test_dpam.py  test_dpam_distance.py  test_emo_similarity.py  test_emo_vad.py  test_nisqa.py  test_nomad.py  test_noresqa.py  test_owsm_lid.py  test_pam.py  test_pesq_score.py  test_pseudo_mos.py  test_sigmos.py  test_stoi.py  test_wvmos.py
tools/: activate_utmosv2.sh  easy_install.sh  install_asvspoof.sh  install_audiobox-aesthetics.sh  install_clap_score.sh  install_emo2vec.sh  install_fairseq.sh  install_faster-whisper.sh  install_fwhisper.sh  install_log_wmse.sh  install_multigauss.sh  install_nemo.sh  install_nomad.sh  install_noresqa.sh  install_pyannote.sh  install_pysepm.sh  install_scoreq.sh  install_srmr.sh  install_ssl-singer-identity.sh  install_utmosv2.sh  install_vqscore.sh  install_wvmos.sh  setup_huggingface_cache.sh  setup_nisqa.sh
versa/: __init__.py  audio_utils.py  definition.py  huggingface_cache.py  interpreter_shared.py  metrics.py  scorer_shared.py  utils_shared.py
(+99 files in other folders)
